# ChangeLog for app-text/aiksaurus
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/aiksaurus/ChangeLog,v 1.11 2004/03/12 08:45:39 mr_bones_ Exp $

  12 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> aiksaurus-0.15.ebuild,
  aiksaurus-1.0.1.ebuild:
  Don't assign default to S; header fix

  09 Feb 2004; Dylan Carlson <absinthe@gentoo.org> aiksaurus-0.15-r1.ebuild:
  added amd64 keyword.

*aiksaurus-1.0.1 (27 Aug 2003)

  27 Aug 2003; Seemant Kulleen <seemant@gentoo.org> aiksaurus-1.0.1.ebuild:
  version bump thanks to: MG <markgilbert@hotpop.com> in bug #23555

  12 Jun 2003; <msterret@gentoo.org> aiksaurus-0.15-r1.ebuild:
  fix Header

*aiksaurus-0.15-r1 (14 Aug 2002)

  10 Mar 2003; Aron Griffis <agriffis@gentoo.org> aiksaurus-0.15-r1.ebuild:
  Mark stable on alpha

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords

  14 Aug 2002; Seemant Kulleen <seemant@gentoo.org> aiksaurus-0.15-r1.ebuild :
  Removed "-fno-exceptions" from user's CFLAGS and CXXFLAGS to make this
  compile.  Thanks to bar4ka@bol.com.br (bar4ka) in bug #6481.
 
*aiksaurus-0.15 (31 May 2002)

  15 Jul 2002; Owen Stampflee <owen@gentoo.org> :
  Added KEYWORDS.

  31 May 2002; Dan Armak <danarmak@gentoo.org> changelog:
  Initial version.