@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/aiksaurus/Attic/aiksaurus-1.0.1.ebuild,v 1.4 2004/04/07 21:26:49 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/aiksaurus/Attic/aiksaurus-1.0.1.ebuild,v 1.5 2004/04/21 23:32:55 khai Exp $
 
 inherit flag-o-matic eutils
 
@@ -16,12 +16,22 @@ DEPEND="sys-devel/gcc"
 
 src_unpack() {
 	unpack ${A}
+
+	# fix -DGTK_DEPRECATED
+	cd ${S}
+	mv configure configure.old
+	sed 's/-DGTK_DISABLE_DEPRECATED//g'  configure.old > configure
+
+	# configure needs +x bit
+	chmod +x configure
+
 	cd ${S}/base
 	epatch ${FILESDIR}/${PN}-0.15-gentoo.patch || die
 }
 
 src_compile() {
 	filter-flags -fno-exceptions
+
 	econf || die
 	emake || die
 }
