@@ -1,6 +1,9 @@
 # ChangeLog for app-text/aiksaurus
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/aiksaurus/ChangeLog,v 1.11 2004/03/12 08:45:39 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/aiksaurus/ChangeLog,v 1.12 2004/04/21 23:32:55 khai Exp $
+
+  21 Apr 2004; <khai@gentoo.org> aiksaurus-1.0.1.ebuild:
+  Fixed -DGTK_DISABLE_DEPRECATED problems, closes bug #46766
 
   12 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> aiksaurus-0.15.ebuild,
   aiksaurus-1.0.1.ebuild:
